Misc style bugs on Safari, JS unknown error in safari on Form Submit bug fix

--- a/src/styles/global/_navigation.scss
+++ b/src/styles/global/_navigation.scss
@@ -72,6 +72,7 @@
 
 .responsive-logo {
   margin-bottom: 2rem;
+  max-width: 300px;
 }
 
 .nav-active {
