--- a/src/styles/woocommerce/_global.scss
+++ b/src/styles/woocommerce/_global.scss
@@ -95,7 +95,7 @@ a.woocommerce-Button {
 
 #primary {
   order: 2;
-  width: 75%;
+  width: 74.9%;
   padding: 4vw 2rem 4vw 0;
 }
 
@@ -180,7 +180,7 @@ a.woocommerce-Button {
   ---------------------------------------------------------------------- */
 @media (max-width: 1200px) {
   #primary {
-    width: 66.666%;
+    width: 66%;
   }
 }
 
